# voxae

./: .env.example  .gitignore  CITATION.cff  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: deploy_space.py  fetch_demo_images.py
tests/: test_components.py  test_config.py  test_grounder_parsing.py  test_gsd.py  test_gsd_exif.py  test_inspect.py  test_iter_samples.py  test_materialize.py  test_metrics.py  test_qc.py  test_query_gen.py  test_registry.py  test_rle.py  test_schemas.py  test_splits.py  test_zero_shot.py
voxae/: __init__.py  cli.py  config.py  viz.py
voxae/data/: audit.py  gsd.py  inspect.py  materialize.py  prep_masks.py  prepare.py  qc.py  query_gen.py  registry.py  rle.py  schemas.py  splits.py
voxae/data/prompts/: qgen_v1.md  qgen_v2.md
voxae/demo/: gradio_app.py
voxae/demo/assets/: ATTRIBUTION.md
voxae/eval/: metrics.py
voxae/eval/baselines/: zero_shot.py
voxae/model/: grounder.py  segmenter.py
