[project]
name = "voxae"
version = "0.1.0"
description = "Language-grounded, metric 3D scene understanding for physical AI"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Nhi Ngo" }]
keywords = [
    "reasoning-segmentation",
    "vision-language",
    "3d-scene-understanding",
    "gaussian-splatting",
    "embodied-ai",
]
dependencies = [
    "numpy>=1.26",
    "pillow>=10.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy ML deps — GPU work happens on Linux cloud; local Windows installs CPU wheels.
ml = [
    "torch>=2.4",
    "transformers>=4.53",
    "accelerate>=0.33",
    "safetensors>=0.4",
]
demo = [
    "gradio>=6.20",
]
data = [
    "pycocotools>=2.0.8",
    "pandas>=2.2",
    "pyarrow>=17",
    "datasets>=2.20",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.scripts]
voxae = "voxae.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voxae"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
# Keep CI light: heavy extras are opt-in.
default-groups = []
